--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Efsane Music Bot",
+  "name": " Music turkey Bot",
   "description": "Pyrogram ve Py-Tgcalls ile Python'da yazılmış uygun işlevlere sahip bir Telegram Müzik Botu.",
   "logo": "https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg",
   "keywords": [
@@ -15,12 +15,12 @@
   "env": {
     "API_ID": {
       "description": "Bu değeri https://my.telegram.org",
-      "value": "",
+      "value": "21814744",
       "required": true
     },
     "API_HASH": {
       "description": "Bu değeri https://my.telegram.org",
-      "value": "",
+      "value": "024ac6bfea2094f8e5e326d778fdcb54",
       "required": true
     },
     "BOT_TOKEN": {
@@ -30,7 +30,7 @@
     },
     "DURATION_LIMIT": {
       "description": "Playout için Süre Sınırı (In Mins).. Example: 60",
-      "value": "60",
+      "value": "180",
       "required": true
     },
     "ASSISTANT_PREFIX": {
@@ -50,17 +50,17 @@
     },
     "SUPPORT_CHANNEL": {
       "description": "Varsa Kanal Bağlantısını Destekleyin, Destek yoksa boş bırakın. Bağlantınız https://t.me/",
-      "value": "",
+      "value": "@rahatsizetmeyiniz34",
       "required": false
     },
     "SUPPORT_GROUP": {
       "description": "Varsa Destek Grubu Bağlantısı, Destek yoksa boş bırakın. Bağlantınız https://t.me/",
-      "value": "",
+      "value": "rahatsizetmeyiniz34",
       "required": false
     },
     "OWNER_ID": {
       "description": "SAHİbİ olarak eklemek istediğiniz kullanıcı(lar)ın kullanıcı kimlikleri. Birden çok değer bir boşlukla ayrıştırılacaktır.",
-      "value": "",
+      "value": "6381139369",
       "required": true
     },
     "STRING_SESSION1": {
@@ -105,12 +105,12 @@
     },
     "SUDO_USERS": {
       "description": "SUDO olarak eklemek istediğiniz kullanıcı(lar)ın kullanıcı kimlikleri. Birden çok değer bir boşlukla ayrıştırılacaktır.",
-      "value": "",
+      "value": "6381139369",
       "required": true
     },
     "UPSTREAM_REPO": {
       "description": "Eğer bunu bilmiyorsan, olduğu gibi git.",
-      "value": "https://github.com/Mehmetbaba06/maho",
+      "value": "",
       "required": true
     },
     "UPSTREAM_BRANCH": {
